--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     </head>
     <body>
 		<%= render 'layouts/main' %>
+        <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyAZVLuVEQ8VfkBfHgpME9RGkvwyzJYXfGo&sensor=false" %>
 	</body>
 
 </html>
