refactor UI, basic functionality present!

--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -2,7 +2,5 @@
 	.navbar-inner
 		.container
 			.brand PaleoMaps
-.container
-	.row
-		.span8#map{:data => {:latitude => @latitude, :longitude => @longitude }} Loading...
-		.span4#place
+#map-container{:data => {:latitude => @latitude, :longitude => @longitude }}
+#menu.span5.well
