--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>PaleoMaps</title>
           <%= stylesheet_link_tag    "application", :media => "all" %>
+          <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyAZVLuVEQ8VfkBfHgpME9RGkvwyzJYXfGo&libraries=places&sensor=false" %>
 		  <%= javascript_include_tag "application" %>
 		  <%= csrf_meta_tags %>
         <meta name="description" content="">
@@ -12,7 +13,6 @@
     </head>
     <body>
 		<%= render 'layouts/main' %>
-        <%= javascript_include_tag "http://maps.googleapis.com/maps/api/js?key=AIzaSyAZVLuVEQ8VfkBfHgpME9RGkvwyzJYXfGo&sensor=false" %>
 	</body>
 
 </html>
